Adding create and list work

--- a/medical_prescription/templates/dashboardHealthProfessional/side_bar.html
+++ b/medical_prescription/templates/dashboardHealthProfessional/side_bar.html
@@ -12,28 +12,30 @@
             <li class="header">Menu</li>
             <!-- Optionally, you can add icons to the links -->
             <li><a href="#"></i> <span>Dashboard</span></a></li>
-            <li class= "treeview">
-                <a href="#">
-                    <i class="fa fa-files-o"></i><span>{% trans "Prescrições" %}</span>
-                    <span class ="pull-right-container">
-            <i class = "fa fa-angle-left pull-right"></i>
-          </span>
-                </a>
-                <ul class = "treeview-menu">
-                    <li><a href="#">{% trans "Listar Prescrições"%}</a></li>
-                    <li><a href="#">{% trans "Criar Modelo de Prescrição"%}</a></li>
-                    <li><a href="#">{% trans "Listar modelos de impressão"%}</a></li>
-                </ul>
-            </li>
+
+{#            <li class= "treeview">#}
+{#                <a href="#">#}
+{#                    <i class="fa fa-files-o"></i><span>{% trans "Prescrições" %}</span>#}
+{#                    <span class ="pull-right-container">#}
+{#            <i class = "fa fa-angle-left pull-right"></i>#}
+{#          </span>#}
+{#                </a>#}
+{#                <ul class = "treeview-menu">#}
+{#                    <li><a href="#">{% trans "Listar Prescrições"%}</a></li>#}
+{#                    <li><a href="#">{% trans "Criar Modelo de Prescrição"%}</a></li>#}
+{#                    <li><a href="#">{% trans "Listar modelos de impressão"%}</a></li>#}
+{#                </ul>#}
+{#            </li>#}
 
             <li class="treeview">
-                <a href="#"><i class="fa fa-file"></i> <span>Recomendações</span>
+                <a href="#"><i class="fa fa-file"></i> <span>{% trans "Trabalhos"%}</span>
                     <span class="pull-right-container">
               <i class="fa fa-angle-left pull-right"></i>
             </span>
                 </a>
                 <ul class="treeview-menu">
-                    <li><a href="#">Recomedações Customizadas</a></li>
+                    <li><a href="{% url 'create_work_ent' %}">{% trans "Criar um Trabalho"%}</a></li>
+                    <li><a href="{% url 'create_work_ent' %}">{% trans "Listar Trabalhos"%}</a></li>
                 </ul>
             </li>
 
