--- a/BDM/templates/dashboardUser/side_bar.html
+++ b/BDM/templates/dashboardUser/side_bar.html
@@ -11,21 +11,21 @@
         <ul class="sidebar-menu" data-widget="tree">
             <li class="header">Menu</li>
             <!-- Optionally, you can add icons to the links -->
-            <li><a href="#"></i> <span>Dashboard</span></a></li>
+            <li><a href="#"><i class="fa fa-dashboard"></i> <span>Dashboard</span></a></li>
 
-{#            <li class= "treeview">#}
-{#                <a href="#">#}
-{#                    <i class="fa fa-files-o"></i><span>{% trans "Prescrições" %}</span>#}
-{#                    <span class ="pull-right-container">#}
-{#            <i class = "fa fa-angle-left pull-right"></i>#}
-{#          </span>#}
-{#                </a>#}
-{#                <ul class = "treeview-menu">#}
-{#                    <li><a href="#">{% trans "Listar Prescrições"%}</a></li>#}
-{#                    <li><a href="#">{% trans "Criar Modelo de Prescrição"%}</a></li>#}
-{#                    <li><a href="#">{% trans "Listar modelos de impressão"%}</a></li>#}
-{#                </ul>#}
-{#            </li>#}
+            {#            <li class= "treeview">#}
+            {#                <a href="#">#}
+            {#                    <i class="fa fa-files-o"></i><span>{% trans "Prescrições" %}</span>#}
+            {#                    <span class ="pull-right-container">#}
+            {#            <i class = "fa fa-angle-left pull-right"></i>#}
+            {#          </span>#}
+            {#                </a>#}
+            {#                <ul class = "treeview-menu">#}
+            {#                    <li><a href="#">{% trans "Listar Prescrições"%}</a></li>#}
+            {#                    <li><a href="#">{% trans "Criar Modelo de Prescrição"%}</a></li>#}
+            {#                    <li><a href="#">{% trans "Listar modelos de impressão"%}</a></li>#}
+            {#                </ul>#}
+            {#            </li>#}
 
             <li class="treeview">
                 <a href="#"><i class="fa fa-file"></i> <span>{% trans "Trabalhos"%}</span>
@@ -52,7 +52,7 @@
                 </ul>
             </li>
 
-            <li><a href="#"></i> <span>Configurações</span></a></li>
+            <li><a href="#"><i class="fa fa-cog"></i> <span>Configurações</span></a></li>
         </ul>
 
         <!-- /.sidebar-menu -->
