Updating Admin, urls, settings and work ent

--- a/BDM/templates/dashboardUser/side_bar.html
+++ b/BDM/templates/dashboardUser/side_bar.html
@@ -35,7 +35,10 @@
                 </a>
                 <ul class="treeview-menu">
                     <li><a href="{% url 'create_work_ent' %}">{% trans "Criar um Trabalho"%}</a></li>
-                    <li><a href="{% url 'create_work_ent' %}">{% trans "Listar Trabalhos"%}</a></li>
+                    <li><a href="{% url 'create_expr_ent' %}">{% trans "Criar uma Expressão"%}</a></li>
+                    <li><a href="{% url 'create_manif_ent' %}">{% trans "Criar uma Manifestação"%}</a></li>
+                    <li><a href="{% url 'create_item_ent' %}">{% trans "Criar um Item"%}</a></li>
+                    <li><a href="#">{% trans "Listar Trabalhos"%}</a></li>
                 </ul>
             </li>
 
