--- a/BDM/templates/dashboardUser/side_bar.html
+++ b/BDM/templates/dashboardUser/side_bar.html
@@ -28,7 +28,7 @@
             {#            </li>#}
 
             <li class="treeview">
-                <a href="#"><i class="fa fa-file"></i> <span>{% trans "Trabalhos"%}</span>
+                <a href="#"><i class="fa fa-file"></i> <span>{% trans "Geral"%}</span>
                     <span class="pull-right-container">
               <i class="fa fa-angle-left pull-right"></i>
             </span>
