--- a/BDM/database/templates/list_work_ent.html
+++ b/BDM/database/templates/list_work_ent.html
@@ -1,5 +1,8 @@
 {% extends "dashboardUser/template.html" %} {% block content %} {% load staticfiles %} {% load static %} {% load i18n %}
-
+    <form method="POST">
+    <input type="text" name="/list_work_ent">
+    <button type="submit">Buscar Titulo</button>
+    </form>
     <div class="panel-body">
         <!-- tab component -->
         <table class="table table-striped table-bordered table-hover">
