--- a/BDM/database/templates/list_manif_ent.html
+++ b/BDM/database/templates/list_manif_ent.html
@@ -1,5 +1,10 @@
 {% extends "dashboardUser/template.html" %} {% block content %} {% load staticfiles %} {% load static %} {% load i18n %}
-
+    <form id="searchform" action="{% url 'search_manif_ent' %}" method="get" accept-charset="utf-8">
+      <button class="searchbutton" type="submit">
+        <i class="fa fa-search"></i>
+      </button>
+      <input class="searchfield" id="searchbox" name="q" type="text" placeholder="Search">
+    </form>
 
     <div class="panel-body">
         <!-- tab component -->
