--- a/BDM/database/templates/list_expr_ent.html
+++ b/BDM/database/templates/list_expr_ent.html
@@ -1,6 +1,11 @@
 {% extends "dashboardUser/template.html" %} {% block content %} {% load staticfiles %} {% load static %} {% load i18n %}
+    <form id="searchform" action="{% url 'search_expr_ent' %}" method="get" accept-charset="utf-8">
+      <button class="searchbutton" type="submit">
+        <i class="fa fa-search"></i>
+      </button>
+      <input class="searchfield" id="searchbox" name="q" type="text" placeholder="Search">
+    </form>
 
-    </ul>
     <div class="panel-body">
         <!-- tab component -->
         <table class="table table-striped table-bordered table-hover">
