--- a/BDM/database/templates/list_item_ent.html
+++ b/BDM/database/templates/list_item_ent.html
@@ -14,6 +14,7 @@
                 <th>{% trans "Identificador do item" %}</th>
                 <th>{% trans "Proveniencia" %}</th>
                 <th>{% trans "Localização do item" %}</th>
+                <th>{% trans "Manifestação Relacionada" %}</th>
                 </thead>
             {% endif %}
 
@@ -24,6 +25,7 @@
                     <td>{{ item.itemIdentifier }}</td>
                     <td>{{ item.provenanceOfTheItem }}</td>
                     <td>{{ item.locationOfItem }}</td>
+                    <td>{{ item.relatedManifEnt }}</td>
                 </tr>
 
                 {% empty %}
