--- a/BDM/database/templates/list_manif_ent.html
+++ b/BDM/database/templates/list_manif_ent.html
@@ -14,6 +14,7 @@
                 <th>{% trans "Titulo" %}</th>
                 <th>{% trans "Data" %}</th>
                 <th>{% trans "Local de Origem da publicadora" %}</th>
+                <th>{% trans "Expressão Relacionada" %}</th>
                 </thead>
             {% endif %}
 
@@ -24,6 +25,7 @@
                     <td>{{ manif.titleOfTheManifestation }}</td>
                     <td>{{ manif.dateOfPublicationDistribution }}</td>
                     <td>{{ manif.placeOfPublicationDistribution }}</td>
+                    <td>{{ manif.relatedExprEnt }}</td>
                 </tr>
 
                 {% empty %}
