--- a/BDM/templates/dashboardUser/side_bar.html
+++ b/BDM/templates/dashboardUser/side_bar.html
@@ -13,19 +13,9 @@
             <!-- Optionally, you can add icons to the links -->
             <li><a href="#"><i class="fa fa-dashboard"></i> <span>Dashboard</span></a></li>
 
-            {#            <li class= "treeview">#}
-            {#                <a href="#">#}
-            {#                    <i class="fa fa-files-o"></i><span>{% trans "Prescrições" %}</span>#}
-            {#                    <span class ="pull-right-container">#}
-            {#            <i class = "fa fa-angle-left pull-right"></i>#}
-            {#          </span>#}
-            {#                </a>#}
-            {#                <ul class = "treeview-menu">#}
-            {#                    <li><a href="#">{% trans "Listar Prescrições"%}</a></li>#}
-            {#                    <li><a href="#">{% trans "Criar Modelo de Prescrição"%}</a></li>#}
-            {#                    <li><a href="#">{% trans "Listar modelos de impressão"%}</a></li>#}
-            {#                </ul>#}
-            {#            </li>#}
+            <li> <a href="{% url 'list_all_ent' %}">
+                <i class="fa fa-files-o"></i><span>{% trans "Listar Tudo" %}</span>
+            </a></li>
 
             <li class="treeview">
                 <a href="#"><i class="fa fa-file"></i> <span>{% trans "Trabalho"%}</span>
